2009-04-26  Guillaume Smet <guillaume-pg@smet.org>

	* added normalization of IN() clauses
	* changed the default order of reports
	* raised the default memory limit to 512 MB
	* released 1.1

2009-04-25  Guillaume Smet <guillaume-pg@smet.org>

	* fixed an oversight in stderr parser related to [#1010525] stderr
	Multiline queries are not parsed
	* backported fixes from BRANCH_1_0

2009-04-18  Guillaume Smet <guillaume-pg@smet.org>

	* added support for lists and regexps in -user and -database filter options
	* updated GeSHi to 1.0.8.3

2009-04-12  Guillaume Smet <guillaume-pg@smet.org>

	* implemented a simple garbage collector mechanism which should reduce
	dramatically the memory usage when a connection pooler is not used

2009-04-05  Guillaume Smet <guillaume-pg@smet.org>

	* applied a patch from Max Valjanski to support large pids on 64 bits
	servers
	* applied a patch from Steve Woodcock to fix a long standing problem
	resulting in leading "statement: " in the query text for some queries

2009-04-01  Guillaume Smet <guillaume-pg@smet.org>

	* applied [#1010529] Error in normalize for bigint (or numeric) numbers
	(length > 10) by Oleg Serov

2008-05-15  Guillaume Smet <guillaume-pg@smet.org>

	* fixed the regexp of the stderr parser to exclude the timezone
	from the timestamp pattern
	* fixed a problem with NOTICE lines causing other lines to be ignored
	(not sure about the consequences though...)

2008-05-13  Guillaume Smet <guillaume-pg@smet.org>

	* moved from Vera to DejaVuSans

2008-05-05  Guillaume Smet <guillaume.smet@openwide.fr>

	* fixed [#1010324] "Fails to recognize FSM info" reported by
	Peter Eisentraut
	* fixed [#1010306] "pgfouine 1.0 not recognizing postgres syslog
	lines" reported by Neil Murray by adding log_error_verbosity=verbose
	support

2008-03-19  Guillaume Smet <guillaume-pg@smet.org>

	* preliminary support for CSV log format introduced in 8.3

2008-03-09  Guillaume Smet <guillaume-pg@smet.org>

	* global copyright update